@@ -1,3 +1,8 @@
+2014-04-02 German Arias <germanandre@gmx.es>
+
+	* Framework/PCFileCreator.m: Removed two last commits. There is
+	something wrong with these.
+
 2014-03-30 German Arias <germanandre@gmx.es>
 
 	* Framework/PCFileCreator.m: Fix last change to ensure all string in the
